force-app/main/default/objects/Screening_Override__c/Screening_Override__c.object-meta.xml
<CustomObject>
    <label>Screening Override</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Screening Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screening Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>