force-app/main/default/objects/Screening_Override__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval_Date</label>
    <type>DateTime</type>
</CustomField>