force-app/main/default/objects/Screening_Override__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>