force-app/main/default/objects/Screening_Override__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved_By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Screening_Overrides1</relationshipName>
    <type>Lookup</type>
</CustomField>