force-app/main/default/objects/Screening_Override__c/fields/New_Screening_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Screening_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New_Screening_Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>