force-app/main/default/objects/Screening_Override__c/fields/Original_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Original_Outcome__c</fullName>
    <label>Original_Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>