force-app/main/default/objects/Screening_Override__c/fields/Override_By__c.field-meta.xml
<CustomField>
    <fullName>Override_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override_By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Screening_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>