force-app/main/default/objects/Screening_Override__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Override_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>