force-app/main/default/objects/Screening_Override__c/fields/Override_Type__c.field-meta.xml
<CustomField>
    <fullName>Override_Type__c</fullName>
    <label>Override_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager Override</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Data Correction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>