force-app/main/default/objects/Screening_Override__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection_Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>