force-app/main/default/objects/Screening_Override__c/fields/Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status_Changed</label>
    <type>Checkbox</type>
</CustomField>