force-app/main/default/objects/Screening_Override__c/validationRules/Cannot_Override_To_Same_Outcome.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Override_To_Same_Outcome</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Original_Outcome__c) = TEXT(New_Outcome__c)</errorConditionFormula>
    <errorMessage>New outcome must be different from original</errorMessage>
</ValidationRule>