force-app/main/default/objects/Screening_Override__c/validationRules/Override_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Override_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Override_Reason__c)</errorConditionFormula>
    <errorMessage>Override reason is required</errorMessage>
</ValidationRule>